# pypilot-settings

./: CMakeLists.txt  README.md  library.properties
.github/workflows/: ci.yml
examples/SettingsExample/: SettingsExample.cpp  SettingsExample.ino  SettingsExampleCore.hpp
src/: pypilot_settings.hpp  pypilot_settings_catalog.hpp  pypilot_settings_config_store.hpp  pypilot_settings_file_store.hpp  pypilot_settings_memory_store.hpp  pypilot_settings_nvs_store.hpp  pypilot_settings_paths.hpp  pypilot_settings_save_policy.hpp  pypilot_settings_servo_serial.hpp  pypilot_settings_store.hpp  pypilot_settings_version.hpp
tests/: test_file_store.cpp  test_memory_store.cpp  test_paths.cpp  test_pypilot_config_store.cpp  test_scope_helpers.cpp  test_settings_catalog.cpp  test_validation.cpp  test_version_policy.cpp
